# Blix

./: .gitignore  Procfile  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/blix/: __init__.py  ai.py  cli.py  config.py  db.py  main.py
backend/blix/api/: router.py
backend/blix/engine/: __init__.py  arrivals.py  fare.py  freshness.py  nearby.py  routes.py
backend/blix/ingestion/: __init__.py  gtfs_time.py  rt_poller.py  static_importer.py
backend/blix/models/: __init__.py  assistant.py  canonical.py  orm.py
backend/blix/providers/: __init__.py  base.py  delhi_otd.py
backend/tests/: test_ai.py  test_config.py  test_freshness.py  test_gtfs_time.py  test_rt_parse.py
docs/: phase-0-understanding.md
infra/: docker-compose.yml
web/: .env.local.example  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: FreshnessBadge.tsx
web/lib/: api.ts
